{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 166,
  "lineage": "cef6684d-e27b-bb1b-9963-2e325a93d517",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:424041797444:loadbalancer/app/tf-lb-20210817040605989000000006/af606653948ce7d2",
            "arn_suffix": "app/tf-lb-20210817040605989000000006/af606653948ce7d2",
            "dns_name": "tf-lb-20210817040605989000000006-759283545.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:424041797444:loadbalancer/app/tf-lb-20210817040605989000000006/af606653948ce7d2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20210817040605989000000006",
            "security_groups": [
              "sg-068906e75ecc35858"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01a1c016ea33eb21c"
              },
              {
                "subnet_id": "subnet-025fe22860c8313a6"
              },
              {
                "subnet_id": "subnet-0f6858c0c36519a94"
              }
            ],
            "subnets": [
              "subnet-01a1c016ea33eb21c",
              "subnet-025fe22860c8313a6",
              "subnet-0f6858c0c36519a94"
            ],
            "vpc_id": "vpc-0708c452179ad5b7d",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "module.sg.aws_security_group.alb",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:424041797444:listener/app/tf-lb-20210817040605989000000006/af606653948ce7d2/1ce7e51b9e9d82d0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:424041797444:targetgroup/tf-20210817040555509000000002/e0fe8aa1e5e89be2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:424041797444:listener/app/tf-lb-20210817040605989000000006/af606653948ce7d2/1ce7e51b9e9d82d0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:424041797444:loadbalancer/app/tf-lb-20210817040605989000000006/af606653948ce7d2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.alb.aws_alb.main",
            "module.alb.aws_alb_target_group.main",
            "module.sg.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:424041797444:targetgroup/tf-20210817040555509000000002/e0fe8aa1e5e89be2",
            "arn_suffix": "targetgroup/tf-20210817040555509000000002/e0fe8aa1e5e89be2",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/login/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:424041797444:targetgroup/tf-20210817040555509000000002/e0fe8aa1e5e89be2",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-20210817040555509000000002",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0708c452179ad5b7d"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:424041797444:security-group/sg-068906e75ecc35858",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-068906e75ecc35858",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210817040555387000000001",
            "name_prefix": "terraform-",
            "owner_id": "424041797444",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django-alb",
              "Project": "django"
            },
            "tags_all": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django-alb",
              "Project": "django"
            },
            "timeouts": null,
            "vpc_id": "vpc-0708c452179ad5b7d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "django_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:424041797444:security-group/sg-0737e0e815f59ebf6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0737e0e815f59ebf6",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20210817040555731100000004",
            "name_prefix": "terraform-",
            "owner_id": "424041797444",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0708c452179ad5b7d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "django_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:424041797444:security-group/sg-02b5d18d38dfa14fa",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02b5d18d38dfa14fa",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-068906e75ecc35858"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "terraform-20210817040557657600000005",
            "name_prefix": "terraform-",
            "owner_id": "424041797444",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django-fargate-service",
              "Project": "django"
            },
            "tags_all": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django-fargate-service",
              "Project": "django"
            },
            "timeouts": null,
            "vpc_id": "vpc-0708c452179ad5b7d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.alb",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "temp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:424041797444:security-group/sg-055d9be24264785a4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-055d9be24264785a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20210817040555610300000003",
            "name_prefix": "terraform-",
            "owner_id": "424041797444",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django-temp",
              "Project": "django"
            },
            "tags_all": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django-temp",
              "Project": "django"
            },
            "timeouts": null,
            "vpc_id": "vpc-0708c452179ad5b7d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_icmp_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": -1,
            "id": "sgrule-4107068547",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-02b5d18d38dfa14fa",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.django_service",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.sg.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-017c9482331d0fbad",
            "domain": "vpc",
            "id": "eipalloc-0d82c226c2ba32b2d",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-01065c35c1898f7be",
            "private_dns": "ip-10-0-1-125.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.125",
            "public_dns": "ec2-52-197-34-106.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.197.34.106",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            },
            "tags_all": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-016838360e2e26fb4",
            "domain": "vpc",
            "id": "eipalloc-003a1daf621d451a0",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0e0eee419330183f1",
            "private_dns": "ip-10-0-2-90.ap-northeast-1.compute.internal",
            "private_ip": "10.0.2.90",
            "public_dns": "ec2-54-150-177-121.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.150.177.121",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            },
            "tags_all": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-00cc616de3b5cd0e3",
            "domain": "vpc",
            "id": "eipalloc-054836c5022ec1601",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-02116053fefcfd3ca",
            "private_dns": "ip-10-0-3-165.ap-northeast-1.compute.internal",
            "private_ip": "10.0.3.165",
            "public_dns": "ec2-52-193-228-200.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.193.228.200",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            },
            "tags_all": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:424041797444:internet-gateway/igw-090607dde57b3eef9",
            "id": "igw-090607dde57b3eef9",
            "owner_id": "424041797444",
            "tags": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            },
            "tags_all": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            },
            "vpc_id": "vpc-0708c452179ad5b7d"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d82c226c2ba32b2d",
            "id": "nat-0bc565f5985a191ed",
            "network_interface_id": "eni-01065c35c1898f7be",
            "private_ip": "10.0.1.125",
            "public_ip": "52.197.34.106",
            "subnet_id": "subnet-025fe22860c8313a6",
            "tags": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            },
            "tags_all": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            }
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-003a1daf621d451a0",
            "id": "nat-0b5062cc62090111c",
            "network_interface_id": "eni-0e0eee419330183f1",
            "private_ip": "10.0.2.90",
            "public_ip": "54.150.177.121",
            "subnet_id": "subnet-0f6858c0c36519a94",
            "tags": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            },
            "tags_all": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            }
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-054836c5022ec1601",
            "id": "nat-0e613e0b1c2da4a51",
            "network_interface_id": "eni-02116053fefcfd3ca",
            "private_ip": "10.0.3.165",
            "public_ip": "52.193.228.200",
            "subnet_id": "subnet-01a1c016ea33eb21c",
            "tags": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            },
            "tags_all": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            }
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e656b8a611a9a34b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0bc565f5985a191ed",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e656b8a611a9a34b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08b8870facd05df291080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b5062cc62090111c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08b8870facd05df29",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0006aa37e284479401080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e613e0b1c2da4a51",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0006aa37e28447940",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-090607dde57b3eef9",
            "id": "r-rtb-071055a7e74c1cf301080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-071055a7e74c1cf30",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:424041797444:route-table/rtb-0e656b8a611a9a34b",
            "id": "rtb-0e656b8a611a9a34b",
            "owner_id": "424041797444",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bc565f5985a191ed",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            },
            "tags_all": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            },
            "vpc_id": "vpc-0708c452179ad5b7d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:424041797444:route-table/rtb-08b8870facd05df29",
            "id": "rtb-08b8870facd05df29",
            "owner_id": "424041797444",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b5062cc62090111c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            },
            "tags_all": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            },
            "vpc_id": "vpc-0708c452179ad5b7d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:424041797444:route-table/rtb-0006aa37e28447940",
            "id": "rtb-0006aa37e28447940",
            "owner_id": "424041797444",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e613e0b1c2da4a51",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            },
            "tags_all": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            },
            "vpc_id": "vpc-0708c452179ad5b7d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:424041797444:route-table/rtb-071055a7e74c1cf30",
            "id": "rtb-071055a7e74c1cf30",
            "owner_id": "424041797444",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-090607dde57b3eef9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            },
            "tags_all": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            },
            "vpc_id": "vpc-0708c452179ad5b7d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027fd155d0673413f",
            "route_table_id": "rtb-0e656b8a611a9a34b",
            "subnet_id": "subnet-06fc5bb40810ae2c4"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e6b79cc55d49a0d",
            "route_table_id": "rtb-08b8870facd05df29",
            "subnet_id": "subnet-08d3090bdb53ecdae"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0664693838e208a38",
            "route_table_id": "rtb-0006aa37e28447940",
            "subnet_id": "subnet-0243441b6b002a91b"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b68ee5c6f8128378",
            "route_table_id": "rtb-0e656b8a611a9a34b",
            "subnet_id": "subnet-0544751ae075bf397"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4362596fa11e27f",
            "route_table_id": "rtb-08b8870facd05df29",
            "subnet_id": "subnet-05db1f9b142c664db"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056d3143fa65b169b",
            "route_table_id": "rtb-0006aa37e28447940",
            "subnet_id": "subnet-02f572c48baa6cfe0"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0618fdc9da8eb0bfc",
            "route_table_id": "rtb-071055a7e74c1cf30",
            "subnet_id": "subnet-025fe22860c8313a6"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8518ad7f2cf7228",
            "route_table_id": "rtb-071055a7e74c1cf30",
            "subnet_id": "subnet-0f6858c0c36519a94"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dff2722a0c9c7f6b",
            "route_table_id": "rtb-071055a7e74c1cf30",
            "subnet_id": "subnet-01a1c016ea33eb21c"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:424041797444:subnet/subnet-06fc5bb40810ae2c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.21.0/24",
            "id": "subnet-06fc5bb40810ae2c4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "424041797444",
            "tags": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            },
            "tags_all": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            },
            "vpc_id": "vpc-0708c452179ad5b7d"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:424041797444:subnet/subnet-08d3090bdb53ecdae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.22.0/24",
            "id": "subnet-08d3090bdb53ecdae",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "424041797444",
            "tags": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            },
            "tags_all": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            },
            "vpc_id": "vpc-0708c452179ad5b7d"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:424041797444:subnet/subnet-0243441b6b002a91b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.0.23.0/24",
            "id": "subnet-0243441b6b002a91b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "424041797444",
            "tags": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            },
            "tags_all": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            },
            "vpc_id": "vpc-0708c452179ad5b7d"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:424041797444:subnet/subnet-0544751ae075bf397",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-0544751ae075bf397",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "424041797444",
            "tags": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            },
            "tags_all": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            },
            "vpc_id": "vpc-0708c452179ad5b7d"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:424041797444:subnet/subnet-05db1f9b142c664db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.12.0/24",
            "id": "subnet-05db1f9b142c664db",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "424041797444",
            "tags": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            },
            "tags_all": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            },
            "vpc_id": "vpc-0708c452179ad5b7d"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:424041797444:subnet/subnet-02f572c48baa6cfe0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.0.13.0/24",
            "id": "subnet-02f572c48baa6cfe0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "424041797444",
            "tags": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            },
            "tags_all": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            },
            "vpc_id": "vpc-0708c452179ad5b7d"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:424041797444:subnet/subnet-025fe22860c8313a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-025fe22860c8313a6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "424041797444",
            "tags": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            },
            "tags_all": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            },
            "vpc_id": "vpc-0708c452179ad5b7d"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:424041797444:subnet/subnet-0f6858c0c36519a94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0f6858c0c36519a94",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "424041797444",
            "tags": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            },
            "tags_all": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            },
            "vpc_id": "vpc-0708c452179ad5b7d"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:424041797444:subnet/subnet-01a1c016ea33eb21c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-01a1c016ea33eb21c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "424041797444",
            "tags": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            },
            "tags_all": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            },
            "vpc_id": "vpc-0708c452179ad5b7d"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:424041797444:vpc/vpc-0708c452179ad5b7d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0009f2cab53718d4e",
            "default_route_table_id": "rtb-03f71d9e4b4b18474",
            "default_security_group_id": "sg-005bb6896a9361c9c",
            "dhcp_options_id": "dopt-af6467c8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0708c452179ad5b7d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03f71d9e4b4b18474",
            "owner_id": "424041797444",
            "tags": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            },
            "tags_all": {
              "CreatedBy": "kakimoto",
              "Environment": "dev",
              "Name": "dev-django",
              "Project": "django"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}